# wikibasedataconnector

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-deploy.yml
conf/: import_claim_with_sparql.json  import_claim_with_sparql_literal.json  import_counties.json  import_counties_properties.json  import_items_add.json  import_mrds_add_claim.json  import_mrds_add_claim_w_quals.json  import_mrds_conf.json  import_mrds_conf_add.json  import_mrds_min_add.json  import_mrds_min_upsert.json  import_mrds_upsert_refs.json  import_properties_add.json
data/: items.csv  mrds_subset.csv  properties.csv
example/: example_upsert.ipynb
src/wikibasedataconnector/: __init__.py  wikibasedataconnector.py
src/wikibasedataconnector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
