[project]
name = "wikibasedataconnector"
version = "0.0.1"
authors = [
  { name="Xentity Corporation", email="contact@xentity.com" },
]
description = "Library used for mapping data easily into Wikibase Systems"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/xentitycorporation/wikibasedataconnector"
"Bug Tracker" = "https://github.com/xentitycorporation/wikibasedataconnector/issues"